--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <div class="grid gap-6   grid-cols-1 lg:grid-cols-2  ">
 
-            <div class="hero min-h-80  rounded-2xl bg-[#131318]" style="background-image: url('./images/2.png');">
+            <div class="hero min-h-80  rounded-2xl bg-[#131318]" style="background-image: url('./Images/2.png');">
               <div class="hero-overlay bg-opacity-50"></div>
               <div class="hero-content text-left text-neutral-content">
                 <div class="max-w-md">
